--- a/Project/TaskMaster/src/TaskMaster_Main.fxml
+++ b/Project/TaskMaster/src/TaskMaster_Main.fxml
@@ -1,12 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.TaskMaster.src.Controller">
-   <children>
-      <Button layoutX="28.0" layoutY="142.0" mnemonicParsing="false" onAction="#showAll" text="Show All" />
-      <Button layoutX="34.0" layoutY="189.0" mnemonicParsing="false" onAction="#create" text="Create" />
-      <Button layoutX="34.0" layoutY="237.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #54b09c;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.TaskMaster.src.Controller">
+   <center>
+      <ImageView fitHeight="170.0" fitWidth="178.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <image>
+            <Image url="@TaskMaster_icon_trial.png" />
+         </image>
+      </ImageView>
+   </center>
+   <top>
+      <AnchorPane prefHeight="93.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <MenuBar prefHeight="25.0" prefWidth="600.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#close" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <Label layoutX="148.0" layoutY="44.0" text="Welcome to TaskMaster!">
+               <font>
+                  <Font name="Berlin Sans FB" size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
+   <bottom>
+      <AnchorPane prefHeight="54.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="274.0" layoutY="15.0" mnemonicParsing="false" onAction="#create" text="Create" />
+            <Button layoutX="495.0" layoutY="15.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
+            <Button layoutX="45.0" layoutY="15.0" mnemonicParsing="false" onAction="#showAll" text="Show All" />
+         </children>
+      </AnchorPane>
+   </bottom>
+</BorderPane>
