--- a/Project/TaskMaster/src/Scene_ShowAll.fxml
+++ b/Project/TaskMaster/src/Scene_ShowAll.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.TaskMaster.src.Controller">
    <top>
       <AnchorPane prefHeight="39.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -49,9 +48,9 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #54b09c;">
                      <children>
-                        <Label layoutX="14.0" layoutY="14.0" text="Current Reminders">
+                        <Label layoutX="6.0" layoutY="5.0" text="Current Reminders">
                            <font>
-                              <Font name="Imprint MT Shadow" size="20.0" />
+                              <Font name="Verdana Bold" size="20.0" />
                            </font>
                         </Label>
                      </children>
