--- a/Project/TaskMaster/src/Scene_CreateReminder.fxml
+++ b/Project/TaskMaster/src/Scene_CreateReminder.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -25,13 +26,13 @@
                   </Label>
                   <TextField fx:id="reminderTitle" layoutX="14.0" layoutY="101.0" promptText="Reminder Title" />
                   <TextField fx:id="reminderDescription" alignment="TOP_LEFT" layoutX="14.0" layoutY="224.0" prefHeight="103.0" prefWidth="403.0" promptText="Reminder Description" />
-                  <TextField fx:id="reminderDate" layoutX="14.0" layoutY="156.0" promptText="Date (MM/DD/YYYY)" />
                   <Button layoutX="365.0" layoutY="359.0" mnemonicParsing="false" onAction="#createSubmit" text="Create" />
                   <Label fx:id="reminderConfirm" layoutX="14.0" layoutY="344.0" prefHeight="56.0" prefWidth="315.0" text=" ">
                      <font>
                         <Font name="Verdana Bold" size="16.0" />
                      </font>
                   </Label>
+                  <DatePicker fx:id="reminderDate" layoutX="14.0" layoutY="157.0" prefHeight="26.0" prefWidth="150.0" promptText="Reminder Date" />
                </children>
             </AnchorPane>
         </items>
