--- a/Project/TaskMaster/src/Scene_CreateReminder.fxml
+++ b/Project/TaskMaster/src/Scene_CreateReminder.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -25,7 +26,6 @@
                      </font>
                   </Label>
                   <TextField fx:id="reminderTitle" layoutX="14.0" layoutY="101.0" promptText="Reminder Title" />
-                  <TextField fx:id="reminderDescription" alignment="TOP_LEFT" layoutX="14.0" layoutY="224.0" prefHeight="103.0" prefWidth="403.0" promptText="Reminder Description" />
                   <Button layoutX="365.0" layoutY="359.0" mnemonicParsing="false" onAction="#createSubmit" text="Create" />
                   <Label fx:id="reminderConfirm" layoutX="14.0" layoutY="344.0" prefHeight="56.0" prefWidth="315.0" text=" ">
                      <font>
@@ -33,6 +33,7 @@
                      </font>
                   </Label>
                   <DatePicker fx:id="reminderDate" layoutX="14.0" layoutY="157.0" prefHeight="26.0" prefWidth="150.0" promptText="Reminder Date" />
+                  <TextArea fx:id="reminderDescription" layoutX="13.0" layoutY="215.0" prefHeight="138.0" prefWidth="403.0" promptText="Reminder Description" />
                </children>
             </AnchorPane>
         </items>
