--- a/Project/TaskMaster/src/Scene_ShowAll.fxml
+++ b/Project/TaskMaster/src/Scene_ShowAll.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.TaskMaster.src.Controller">
@@ -54,7 +54,7 @@
                               <Font name="Verdana Bold" size="20.0" />
                            </font>
                         </Label>
-                        <ListView fx:id="remindersListView" layoutX="12.0" layoutY="39.0" prefHeight="320.0" prefWidth="422.0" />
+                        <VBox fx:id="vbox" layoutX="8.0" layoutY="34.0" prefHeight="334.0" prefWidth="433.0" />
                      </children>
                   </AnchorPane>
               </items>
